--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Time zone in tz database format
-TZ=Europe/Minsk
+TZ=Asia/Jakarta
 ENV=ANYTHING
 WORKERS=4
-BOT_TOKEN=
+BOT_TOKEN=6425364400:AAGE_Xg7d3uR3KaasSdmFEUdMJ3Bw6D59I4
 # ID of user which can configure the bot throught PM
-OWNER_ID=
+OWNER_ID=1474271232
 # Chat ID's in format -100XXXXXXXXXX
-FROM_CHATS=
-TO_CHATS=
+FROM_CHATS=-1004034481895
+TO_CHATS=-1001862629813
